--- a/src/Bmbsqd.ElasticIdentity/Bmbsqd.ElasticIdentity.nuspec
+++ b/src/Bmbsqd.ElasticIdentity/Bmbsqd.ElasticIdentity.nuspec
@@ -2,14 +2,14 @@
 <package >
 	<metadata>
 		<id>Bmbsqd.ElasticIdentity</id>
-		<version>0.1.1-RC1</version>
+		<version>0.2.0.0</version>
 		<title>Identity Provider for Elasticsearch</title>
 		<authors>BMBSQD</authors>
 		<owners>BMBSQD</owners>
 		<description>$description$</description>
 		<licenseUrl>http://opensource.org/licenses/MIT</licenseUrl>
 		<projectUrl>https://github.com/bmbsqd/elastic-identity</projectUrl>
-		<!--<iconUrl>http://www.gravatar.com/avatar/6c1b5d14ac0149017ce66ca15b499c98.png?s=16&d=identicon</iconUrl>-->
+		<iconUrl>http://www.gravatar.com/avatar/778137d42770f739df317b3cde5454ed.png?s=128</iconUrl>
 		<requireLicenseAcceptance>false</requireLicenseAcceptance>
 		<releaseNotes>Initial release</releaseNotes>
 		<copyright>© Bombsquad AB 2013</copyright>
