Upgrading to Identity 2.0

--- a/src/Bmbsqd.ElasticIdentity/Bmbsqd.ElasticIdentity.nuspec
+++ b/src/Bmbsqd.ElasticIdentity/Bmbsqd.ElasticIdentity.nuspec
@@ -2,7 +2,7 @@
 <package >
 	<metadata>
 		<id>Bmbsqd.ElasticIdentity</id>
-		<version>0.2.0.2</version>
+		<version>0.3.0.0</version>
 		<title>Identity Provider for Elasticsearch</title>
 		<authors>BMBSQD</authors>
 		<owners>BMBSQD</owners>
@@ -11,13 +11,14 @@
 		<projectUrl>https://github.com/bmbsqd/elastic-identity</projectUrl>
 		<iconUrl>http://www.gravatar.com/avatar/778137d42770f739df317b3cde5454ed.png?s=128</iconUrl>
 		<requireLicenseAcceptance>false</requireLicenseAcceptance>
-		<releaseNotes>Initial release</releaseNotes>
-		<copyright>© Bombsquad AB 2014</copyright>
-		<tags>identity elasticsearch ealstic search</tags>
+		<releaseNotes>Update for AspNet Identity 2.0</releaseNotes>
+		<copyright>© Bombsquad Inc 2014</copyright>
+		<tags>identity elasticsearch elastic search</tags>
 		<!--<references></references>-->
 		<dependencies>
 			<group>
-				<dependency id="Microsoft.AspNet.Identity.Core" version="[1.0,2.0)" />
+				<dependency id="Microsoft.AspNet.Identity.Core" version="2.0" />
+				<dependency id="Newtonsoft.Json" version="6.0" />
 				<dependency id="NEST" version="0.12.0.0" />
 			</group>
 		</dependencies>
