added parameter validation for indexName, more tests

--- a/src/Bmbsqd.ElasticIdentity.Tests/Bmbsqd.ElasticIdentity.Tests.csproj
+++ b/src/Bmbsqd.ElasticIdentity.Tests/Bmbsqd.ElasticIdentity.Tests.csproj
@@ -51,6 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CustomNames.cs" />
+    <Compile Include="ExtendedUser.cs" />
     <Compile Include="Methods.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestBase.cs" />
