Disabled analyzer on provider login and key fields.
With the analyzer on, the provider key was not being matched against
what was sent by the authorization server.
Added the ElasticUserLoginInfo and decorate with the proper attributes.

--- a/src/Bmbsqd.ElasticIdentity/Bmbsqd.ElasticIdentity.csproj
+++ b/src/Bmbsqd.ElasticIdentity/Bmbsqd.ElasticIdentity.csproj
@@ -65,6 +65,7 @@
     <Compile Include="ElasticUser.cs" />
     <Compile Include="ElasticUserConfirmed.cs" />
     <Compile Include="ElasticUserEmail.cs" />
+    <Compile Include="ElasticUserLoginInfo.cs" />
     <Compile Include="ElasticUserPhone.cs" />
     <Compile Include="ElasticUserStore.cs" />
     <Compile Include="ElasticUserStoreTraceEventArgs.cs" />
