NEST update, impl. FindAsync w/ GET , decoupled Id
Upgraded to NEST 1.0.0-rc1, which fixed several issues, including proper
exception handling for 404 status codes on GET requests.

Implemented FindAsync methods with GET async where applicable. Added the
unit tests.

Decoupled the Id property from Username and provided a default auto
generated value. A separate Id property might still be useful in
scenarios where passing a username or email in a url is not desired. The
UserManager is doing a nice job of falling back to the appropriate
method when searching by Id/Username/Email.

--- a/src/Bmbsqd.ElasticIdentity/Bmbsqd.ElasticIdentity.csproj
+++ b/src/Bmbsqd.ElasticIdentity/Bmbsqd.ElasticIdentity.csproj
@@ -41,8 +41,9 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Elasticsearch.Net">
-      <HintPath>..\..\packages\Elasticsearch.Net.1.0.0-beta1\lib\Elasticsearch.Net.dll</HintPath>
+    <Reference Include="Elasticsearch.Net, Version=1.0.0.0, Culture=neutral, PublicKeyToken=96c599bbe3e70f5d, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\packages\Elasticsearch.Net.1.0.0-rc1\lib\Elasticsearch.Net.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.AspNet.Identity.Core, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -50,7 +51,7 @@
     </Reference>
     <Reference Include="Nest, Version=1.0.0.0, Culture=neutral, PublicKeyToken=96c599bbe3e70f5d, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\packages\NEST.1.0.0-beta1\lib\Nest.dll</HintPath>
+      <HintPath>..\..\packages\NEST.1.0.0-rc1\lib\Nest.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
