--- a/src/Bmbsqd.ElasticIdentity/Bmbsqd.ElasticIdentity.nuspec
+++ b/src/Bmbsqd.ElasticIdentity/Bmbsqd.ElasticIdentity.nuspec
@@ -3,7 +3,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
 	<metadata>
 		<id>Bmbsqd.ElasticIdentity</id>
-		<version>1.0.0-rc2</version>
+		<version>1.0.0</version>
 		<title>Identity Provider for Elasticsearch</title>
 		<authors>BMBSQD</authors>
 		<owners>BMBSQD</owners>
@@ -12,7 +12,7 @@
 		<projectUrl>https://github.com/bmbsqd/elastic-identity</projectUrl>
 		<iconUrl>http://www.gravatar.com/avatar/778137d42770f739df317b3cde5454ed.png?s=128</iconUrl>
 		<requireLicenseAcceptance>false</requireLicenseAcceptance>
-		<releaseNotes>Fixed invalid NEST dependency</releaseNotes>
+		<!--<releaseNotes></releaseNotes>-->
 		<copyright>© Bombsquad Inc 2014</copyright>
 		<tags>identity elasticsearch elastic search</tags>
 		<!--<references></references>-->
@@ -20,7 +20,7 @@
 			<group>
 				<dependency id="Microsoft.AspNet.Identity.Core" version="2.0" />
 				<dependency id="Newtonsoft.Json" version="6.0" />
-				<dependency id="NEST" version="1.0.0-rc1" />
+				<dependency id="NEST" version="1.0" />
 			</group>
 		</dependencies>
 	</metadata>
